// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitTwammOrder > various pools > one pool, token0 - priceImpact 1`] = `0.06768780694432981`;

exports[`splitTwammOrder > various pools > one pool, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 29572037879931651n,
  },
]
`;

exports[`splitTwammOrder > various pools > one pool, token1 - priceImpact 1`] = `0.06768594231901111`;

exports[`splitTwammOrder > various pools > one pool, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 29572037879931657n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token0 - priceImpact 1`] = `0.8206803604392978`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 41821177036810446n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token1 - priceImpact 1`] = `0.8037592832572547`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 41417116263934591n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token0 - priceImpact 1`] = `0.0444157965480108`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023420n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295689n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token1 - priceImpact 1`] = `0.04441388537864802`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023424n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295692n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token0 - priceImpact 1`] = `0.025966892954366393`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 282179317095523925n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token1 - priceImpact 1`] = `0.025965024053061055`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 282179315137456691n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token0 - priceImpact 1`] = `0.07656158303794594`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 29286323767419650n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token1 - priceImpact 1`] = `0.820684001980467`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 41821177036810455n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token0 - priceImpact 1`] = `0.8878169479208314`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 21381263540781848n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 21170116370792619n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token1 - priceImpact 1`] = `0.5179910018257763`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 5406386711306600n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 5352395221635244n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token0 - priceImpact 1`] = `0.0444157965480108`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023420n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295689n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 - priceImpact 1`] = `0.04441388537864802`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023424n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295692n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token0 - priceImpact 1`] = `0.8037556757440988`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 41417116263934581n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token1 - priceImpact 1`] = `0.06768594231901111`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 29572037879931658n,
  },
]
`;
